--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="index.css" />
-		<title>Document</title>
+		<title>Tic-Tac-Toe</title>
 	</head>
 	<body>
 		<div class="header">
-			<h1>Tic Tac Toe</h1>
+			<h1>Tic-Tac-Toe</h1>
 		</div>
 		<div class="game-board">
-			<div class="square-1 square"></div>
-			<div class="square-2 square"></div>
-			<div class="square-3 square"></div>
-			<div class="square-4 square"></div>
-			<div class="square-5 square"></div>
-			<div class="square-6 square"></div>
-			<div class="square-7 square"></div>
-			<div class="square-8 square"></div>
-			<div class="square-9 square"></div>
+			<div class="square-1 square"><h1 class="move">X</h1></div>
+			<div class="square-2 square"><h1 class="move">X</h1></div>
+			<div class="square-3 square"><h1 class="move">X</h1></div>
+			<div class="square-4 square"><h1 class="move">X</h1></div>
+			<div class="square-5 square"><h1 class="move">X</h1></div>
+			<div class="square-6 square"><h1 class="move">X</h1></div>
+			<div class="square-7 square"><h1 class="move">X</h1></div>
+			<div class="square-8 square"><h1 class="move">X</h1></div>
+			<div class="square-9 square"><h1 class="move">X</h1></div>
 		</div>
 		<script src="index.js"></script>
 	</body>
