--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 			<h1>Tic-Tac-Toe</h1>
 		</div>
 		<div class="game-board">
-			<div class="square-1 square"><h1 class="move">X</h1></div>
-			<div class="square-2 square"><h1 class="move">X</h1></div>
-			<div class="square-3 square"><h1 class="move">X</h1></div>
-			<div class="square-4 square"><h1 class="move">X</h1></div>
-			<div class="square-5 square"><h1 class="move">X</h1></div>
-			<div class="square-6 square"><h1 class="move">X</h1></div>
-			<div class="square-7 square"><h1 class="move">X</h1></div>
-			<div class="square-8 square"><h1 class="move">X</h1></div>
-			<div class="square-9 square"><h1 class="move">X</h1></div>
-		</div>
+			<div class="square"><h1 class="moves move-1" data-id="0"></h1></div>
+			<div class="square"><h1 class="moves move-2" data-id="1"></h1></div>
+			<div class="square"><h1 class="moves move-3" data-id="2"></h1></div>
+			<div class="square"><h1 class="moves move-4" data-id="3"></h1></div>
+			<div class="square"><h1 class="moves move-5" data-id="4">S</h1></div>
+			<div class="square"><h1 class="moves move-6" data-id="5"></h1></div>
+			<div class="square"><h1 class="moves move-7" data-id="6"></h1></div>
+			<div class="square"><h1 class="moves move-8" data-id="7"></h1></div>
+			<div class="square"><h1 class="moves move-9" data-id="8"></h1></div>
+        </div>
 		<script src="index.js"></script>
 	</body>
 </html>
