Implemented Logic to check for win

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="index.css" />
+        <link rel="shortcut icon" href="grid.ico" type="image/x-icon">
 		<title>Tic-Tac-Toe</title>
 	</head>
 	<body>
@@ -16,7 +17,7 @@
 			<div class="square"><h1 class="moves move-2" data-id="1"></h1></div>
 			<div class="square"><h1 class="moves move-3" data-id="2"></h1></div>
 			<div class="square"><h1 class="moves move-4" data-id="3"></h1></div>
-			<div class="square"><h1 class="moves move-5" data-id="4">S</h1></div>
+			<div class="square"><h1 class="moves move-5" data-id="4"></h1></div>
 			<div class="square"><h1 class="moves move-6" data-id="5"></h1></div>
 			<div class="square"><h1 class="moves move-7" data-id="6"></h1></div>
 			<div class="square"><h1 class="moves move-8" data-id="7"></h1></div>
