Added text indicated player's marker

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<div class="header">
 			<h1>Tic-Tac-Toe</h1>
 		</div>
+        <div class="game-info"><h1>Player 1 (X) Goes First</h1>
+        <h1>Player 2 (O) Goes Second</h1></div>
 		<div class="game-board">
 			<div class="square"><h1 class="moves move-1" data-id="0"></h1></div>
 			<div class="square"><h1 class="moves move-2" data-id="1"></h1></div>
